Fix header layout issue (margin / padding)

--- a/site/html/style.css
+++ b/site/html/style.css
@@ -103,7 +103,7 @@ hr {
 
 .header-section {
   min-width: 24px;
-  padding: 0 10px;
+  margin: 0 10px;
   position: relative;
 }
 
